# workshop_callgrind

./: .clang-format  CMakeLists.txt  Callgrind_Talk_Notes.md  Readme.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  fib_binet.cpp  fib_exchange.cpp  fib_iterative.cpp  fib_recursive.cpp  fibonacci.hpp  fibonacci_binet.cpp  fibonacci_binet.hpp  fibonacci_dp.cpp  fibonacci_dp.hpp  fibonacci_fast_doubling.cpp  fibonacci_fast_doubling.hpp  fibonacci_generator.cpp  fibonacci_generator.hpp  fibonacci_iterative.cpp  fibonacci_iterative.hpp  fibonacci_matrix.cpp  fibonacci_matrix.hpp  fibonacci_optimized.cpp  fibonacci_optimized.hpp  fibonacci_recursive.cpp  fibonacci_recursive.hpp  main_binet.cpp  main_dp.cpp  main_fast_doubling.cpp  main_generator.cpp  main_iterative.cpp  main_matrix.cpp  main_optimized.cpp  main_recursive.cpp  matrix_mult.cpp  sort.cpp
examples/fibonacci/: CMakeLists.txt  fibonacci_all.cpp  fibonacci_all.hpp  fibonacci_binet.cpp  fibonacci_binet.hpp  fibonacci_dp.cpp  fibonacci_dp.hpp  fibonacci_fast_doubling.cpp  fibonacci_fast_doubling.hpp  fibonacci_generator.cpp  fibonacci_generator.hpp  fibonacci_iterative_I.cpp  fibonacci_iterative_I.hpp  fibonacci_iterative_II.cpp  fibonacci_iterative_II.hpp  fibonacci_matrix.cpp  fibonacci_matrix.hpp  fibonacci_recursive.cpp  fibonacci_recursive.hpp  main_all.cpp  main_binet.cpp  main_dp.cpp  main_fast_doubling.cpp  main_generator.cpp  main_iterative_I.cpp  main_iterative_II.cpp  main_matrix.cpp  main_recursive.cpp
